# sensevoice_cpp

./: CMakeLists.txt  README.md  asr_demo.py  build_asr.sh  requirements.txt
asr/: __init__.py  asr.py
asr/models/: sensevoice_bin.py  tokenizer.py
audio/: __init__.py  record_vad.py
include/: asr_model.hpp  audio_processor.hpp  audio_recorder.hpp  model_downloader.hpp  tokenizer.hpp  vad_detector.hpp
src/: asr_model.cpp  audio_processor.cpp  audio_recorder.cpp  main.cpp  model_downloader.cpp  tokenizer.cpp  vad_detector.cpp
